# BlueROV2_ROS2

./: .gitignore  README.md
ros2_ws/: test.xml
ros2_ws/Tools/: correctionImu.py  csvReader.py  csvReaderDeadRecko.py  video.py  video2.py
ros2_ws/Tools/webp2mp4/: =4.5  webp2pp4.py
ros2_ws/coolMouvements/: .~lock.logs.csv#  logs.csv  metadata.yaml  rosbag2_2025_02_13-11_58_59_0.db3
ros2_ws/formeSympaPeutEtreTriangle/: .~lock.250205_rosbagStabilisationProfondeurClean.csv#  metadata.yaml  rosbag2_2025_02_13-12_12_30_0.db3
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/bluerov_ros_camera/lib/bluerov_ros_camera/: bluerov_ros_cameraNode
ros2_ws/install/bluerov_ros_camera/share/bluerov_ros_camera/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/bluerov_vision/lib/bluerov_vision/: bluerov_visionNode
ros2_ws/install/bluerov_vision/share/bluerov_vision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/castor_pollux/share/castor_pollux/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/castor_pollux/share/castor_pollux/launch/: castor_polluxDepthSansUSBL.launch.py  castor_polluxOld.launch.py  castor_polluxTestGuidancePressure.launch.py  (+2 more)
ros2_ws/install/control/share/control/: control_launch.py  package.sh  package.xml
ros2_ws/install/guidance/lib/guidance/: guidance_depth  guidance_path_following
ros2_ws/install/guidance/share/guidance/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/message2/share/message2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/rviz_view/lib/rviz_view/: boat_simulation_node  target_publisher_node
ros2_ws/install/rviz_view/share/rviz_view/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/sensors/lib/sensors/: sensors_node  sensors_node_debug
ros2_ws/install/sensors/share/sensors/: package.sh  package.xml
ros2_ws/install/td2/lib/td2/: boat_simulation_node  target_publisher_node
ros2_ws/install/td2/share/td2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/usbl_seatrac/lib/usbl_seatrac/: usbl_pub_cpp  usbl_pub_cpp_choice_beacon  usbl_pub_cpp_multi
ros2_ws/install/usbl_seatrac/share/usbl_seatrac/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/longAvecPasMalDeLogs/: metadata.yaml  view.xml
ros2_ws/src/bluerov_vision/: setup.cfg  setup.py
ros2_ws/src/bluerov_vision/bluerov_vision/: bluerov_vision.py
ros2_ws/src/castor_pollux/: package.xml  setup.cfg  setup.py
ros2_ws/src/castor_pollux/launch/: castor_pollux.launch.py  castor_polluxPathFollowing.launch.py  castor_polluxSetOrientation.launch.py
ros2_ws/src/control/: setup.py
ros2_ws/src/control/control/: control_script.py
ros2_ws/src/guidance/: package.xml  setup.py
ros2_ws/src/guidance/guidance/: AllPointsXYCSTheta.npy  guidance_depth.py  guidance_orientation.py  guidance_path_following.py
ros2_ws/src/guidance/guidance/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/guidance/guidance/log/: latest_build
ros2_ws/src/localization/: package.xml  setup.py
ros2_ws/src/localization/localization/: README.md  localization.py
ros2_ws/src/message2/: CMakeLists.txt
ros2_ws/src/rviz_view/: CMakeLists.txt  package.xml
ros2_ws/src/rviz_view/config/: rviz_view.yaml
ros2_ws/src/rviz_view/include/rviz_view/: boat_simulation.hpp
ros2_ws/src/rviz_view/src/: boat_global_target.cpp  boat_simulation.cpp
ros2_ws/src/sensors/: setup.py
ros2_ws/src/sensors/sensors/: sensors_script.py
ros2_ws/src/td2/: CMakeLists.txt
ros2_ws/src/td2/config/: td2.yaml
ros2_ws/src/td2/src/: boat_controller.cpp  boat_global_target.cpp  boat_simulation.cpp  boat_simulation.hpp
ros2_ws/src/usbl_seatrac/: CMakeLists.txt  format_logs.txt
ros2_ws/src/usbl_seatrac/src/: usbl_pub_cpp.cpp  usbl_pub_cpp_AvecCommentaires.cpp  usbl_pub_cpp_choice_beacon2.cpp  usbl_pub_cpp_multi3.cpp
ros2_ws/src/usbl_seatrac/src/old/: usbl_pub_cpp_choice_beacon.cpp  usbl_pub_cpp_multi.cpp  usbl_pub_cpp_multi2.cpp
(+35 files in other folders)
